--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
 			<version>8.0.33</version>
 		</dependency>
 
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>sqs</artifactId>
+		</dependency>
+
+
 
 	</dependencies>
 	<dependencyManagement>
@@ -70,6 +76,13 @@
 				<groupId>software.amazon.awssdk</groupId>
 				<artifactId>bom</artifactId>
 				<version>2.25.15</version> <!-- latest as of June 2025 -->
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>software.amazon.awssdk</groupId>
+				<artifactId>bom</artifactId>
+				<version>2.25.15</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
