--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/awss3demo
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+
+
+aws.sqs.queue-url=https://sqs.eu-north-1.amazonaws.com/872869652879/springboot-sqs-demo
